fixed gamepage sizing issue +chat message wrapping

--- a/src/client/containers/GamePage/style.css
+++ b/src/client/containers/GamePage/style.css
@@ -125,3 +125,7 @@
   max-height: 200px;
 }
 */
+
+.overflowWrap-breakWord {
+  overflow-wrap: break-word;
+}
